# clinicaMedicaT2

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: README
app/: main.py
app/agents/: base.py  documents.py  faq.py  feedback.py  reminder.py  scheduling.py  triage.py
app/api/: chat.py  routes.py  webhooks.py
app/core/: config.py
app/data/: faq.md
app/db/: session.py
app/models/: __init__.py  appointment.py  document.py  feedback.py  message.py  patient.py  reminder_log.py
app/orchestrator/: graph.py  state.py
app/schemas/: chat.py  events.py
app/services/: calendar.py  conversation_service.py  llm.py  message_service.py  patient_service.py  rate_limit.py  security.py  storage.py  waha_client.py
app/tasks/: celery_app.py  reminders.py
tests/: test_chat_architecture.py  test_health.py
