[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinica-chatbot"
version = "0.1.0"
description = "Chatbot de clinica medica integrado ao WAHA via WhatsApp."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "celery[redis]>=5.4.0",
  "fastapi>=0.115.0",
  "google-api-python-client>=2.164.0",
  "google-auth>=2.38.0",
  "google-genai>=1.9.0",
  "httpx>=0.28.1",
  "langchain-core>=0.3.40",
  "langgraph>=0.2.70",
  "minio>=7.2.15",
  "pydantic-settings>=2.8.1",
  "psycopg[binary]>=3.2.5",
  "python-multipart>=0.0.20",
  "redis>=5.2.1",
  "sqlalchemy>=2.0.39",
  "structlog>=25.2.0",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "ruff>=0.11.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
